<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home2"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/info"
            android:icon="@drawable/info" />
        <item
            android:id="@+id/nav_add_property"
            android:title="@string/addproperty"
            android:icon="@drawable/ic_add" />
        <item
            android:id="@+id/nav_bookings"
            android:title="@string/booked"
            android:icon="@drawable/ic_bookmark" />
        <item
            android:id="@+id/nav_property_review"
            android:title="@string/writeReview"
            android:icon="@drawable/ic_feedback" />
        <item
            android:id="@+id/nav_saved"
            android:title="@string/saved"
            android:icon="@drawable/ic_favourite" />
    </group>

        <item android:title="@string/likeapp">
        <menu>
                <item
                    android:id="@+id/nav_rate"
                    android:title="@string/appfeedback"
                    android:icon="@drawable/ic_feedback" />
                <item
                    android:id="@+id/nav_logOut"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_person1" />

        </menu>
        </item>

</menu>