<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bih.ba.smjestise.smjestise.ReservationActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/apartman_za_rez"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/button_selector2"
                android:layout_marginTop="5dp"
                android:text=""/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/checkinout"
                android:layout_below="@+id/apartman_za_rez">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/checkin_reservation"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/checkout_reservation"
                    android:textAllCaps="false"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkinout"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/intro_to_res">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/details"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:id="@+id/det"
                    android:text=""
                    android:textSize="14dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_to_pay01"
                    android:padding="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:layout_below="@+id/intro_to_res"
                android:id="@+id/reservation_details">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/f_name"
                    android:id="@+id/f_name"
                    android:layout_marginBottom="6dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/l_name"
                    android:id="@+id/l_name"
                    android:layout_marginBottom="6dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailaddress"
                    android:id="@+id/email_add"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="6dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:id="@+id/user1_address"
                    android:layout_marginBottom="6dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:id="@+id/user1_city"
                    android:layout_marginBottom="6dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m_phone"
                    android:inputType="phone"
                    android:digits="0123456789+"
                    android:id="@+id/user1_mob_phone"
                    android:layout_marginBottom="6dp"

                    />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_reservation"
                android:text="@string/confirmReservation"
                android:layout_below="@id/reservation_details"
                android:background="@drawable/button_reserve"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>