<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="bih.ba.smjestise.smjestise.Fragments.AddYourProperty">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/add_property_background"
        android:scaleType="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joinapp"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/join"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="28sp"/>
    <TextView
        android:layout_below="@+id/join"
        android:id="@+id/join_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guestsWaiting"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/sendEmail"
        android:layout_below="@+id/join_post"
        android:text="@string/sendEmail"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/button_reserve"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/bootom_navigation"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_menu">




    </android.support.design.widget.BottomNavigationView>

</RelativeLayout>
