<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bih.ba.smjestise.smjestise.Fragments.RateApp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:id="@+id/rate_all"
       android:gravity="center_horizontal|center_vertical"
       android:layout_centerVertical="true"
       >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rateapp1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:id="@+id/app_useful"

        android:layout_centerHorizontal="true"
        />
    <RatingBar
        android:id="@+id/ratingBar"
        android:numStars="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:theme="@style/CustomRatingBar"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/text_rateapp2"
           android:textAlignment="center"
           android:textSize="15sp"
           android:layout_below="@+id/ratingBar"
           android:layout_centerHorizontal="true"
           />

       <EditText
           android:layout_width="250dp"
           android:layout_height="100dp"
           android:inputType="text|textMultiLine"
           android:id="@+id/userComment"
           android:hint="..."

          />
       <Button
           android:layout_width="210dp"
           android:layout_height="wrap_content"
           android:text="@string/done"
           android:layout_marginTop="15dp"
           android:id="@+id/submitRate"
           android:background="@drawable/button_transparent_border"
           android:textAllCaps="false"
           android:layout_centerHorizontal="true"/>
   </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/bootom_navigation"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_menu">




    </android.support.design.widget.BottomNavigationView>


</RelativeLayout>
