<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ViewHolders.ApartmentDetails"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:id="@+id/scrollView1">
        <RelativeLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#f2f2f2"
                android:layout_below="@+id/slider"
                android:id="@+id/info"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:textSize="20sp"
                    android:id="@+id/property_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:textColor="#000000"/>


                <TextView
                    android:text=""
                    android:id="@+id/property_city"
                    android:layout_below="@+id/property_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center_horizontal"
                    android:textSize="14dp"/>
                <TextView
                    android:text=""
                    android:id="@+id/property_address"
                    android:layout_below="@+id/property_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:gravity="center_horizontal"
                    android:textSize="14dp"/>
            </LinearLayout>
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/info"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                tools:context="bih.ba.smjestise.smjestise.ViewHolders.ApartmentDetails"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/newperks"
                android:background="#ffffff"
                android:layout_below="@id/map">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_wifi"
                            android:id="@+id/perks_wifi"
                            />
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_parking"
                            android:id="@+id/perks_parking"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_pets"
                            android:id="@+id/perks_pets"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_smoking"
                            android:id="@+id/perks_smoking"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_child"
                            android:id="@+id/perks_child_friendly"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_kitchen"
                            android:id="@+id/perks_kitchen"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_breakfast"
                            android:id="@+id/perks_breakfast"/>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ap_desc_all"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-17dp"
                android:background="@drawable/button_selector2"
                android:layout_below="@+id/newperks"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apartment_description"
                    android:textSize="20sp"
                    android:textColor="#00000a"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ap_desc"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:layout_marginTop="4dp"
                    android:text="@string/readMore"
                    android:id="@+id/read_more"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/commentsTOTAL"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/ap_desc_all"
                android:orientation="vertical"
                android:background="#ffffff">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guestSay"
                    android:textStyle="bold"

                    android:textSize="18sp"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"/>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView04"
                        android:layout_below="@+id/comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/commentsTOTAL"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/leaveReview"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leaveReview"
                    android:id="@+id/writeComment"
                    android:drawableRight="@drawable/ic_star"
                    android:background="@drawable/button_transparent_border"
                    android:visibility="gone"/>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"

            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/reserve"
                android:text="@string/reserve"
                android:drawablePadding="2dp"
                android:background="@drawable/button_transparent_border"
                android:drawableRight="@drawable/ic_calendar"
                android:layout_marginRight="14dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/save"
                android:drawableRight="@drawable/ic_favourite"
                android:background="@drawable/button_transparent_border"
                android:drawablePadding="2dp"
                android:text="@string/save"/>
        </LinearLayout>

</RelativeLayout>
